--- a/src/Makefile
+++ b/src/Makefile
@@ -1,15 +1,21 @@
-PROGNAME      = imthreshold-fadsmooth imthreshold-fautoinv imthreshold-fbgfglsep imthreshold-fdespeckle imthreshold-fgreyworld imthreshold-fillumc imthreshold-finfo imthreshold-fkmeans imthreshold-flevelmean imthreshold-flevelsigma imthreshold-fpmean imthreshold-fretinex imthreshold-fselgauss imthreshold-fshrink imthreshold-funripple imthreshold-funsharp imthreshold-fwiener imthreshold-sbicub imthreshold-sbilin imthreshold-sbwmag2 imthreshold-shris imthreshold-snearest imthreshold-tabutaleb imthreshold-tbernsen imthreshold-tbht imthreshold-tbimod imthreshold-tdalg imthreshold-tdither imthreshold-tdjvul imthreshold-tent imthreshold-teqbright imthreshold-tgatos imthreshold-tgrad imthreshold-thalftone2 imthreshold-tjanni imthreshold-tkmeans imthreshold-tnib imthreshold-totsu imthreshold-trot imthreshold-tsauvola imthreshold-ttext imthreshold-ttsai imthreshold-twhiterohrer
+PROGNAME      = imthreshold-deskew imthreshold-rotate imthreshold-fadsmooth imthreshold-fautoinv imthreshold-fbgdiv imthreshold-fbgfglsep imthreshold-fdespeckle imthreshold-fdneuro imthreshold-fgreyworld imthreshold-fillumc imthreshold-finfo imthreshold-fkmeans imthreshold-flevelmean imthreshold-flevelsigma imthreshold-fpmean imthreshold-fretinex imthreshold-fselgauss imthreshold-fshrink imthreshold-funripple imthreshold-funsharp imthreshold-fwiener imthreshold-sbicub imthreshold-sbilin imthreshold-sbwmag2 imthreshold-shris imthreshold-snearest imthreshold-tabutaleb imthreshold-tbernsen imthreshold-tbht imthreshold-tbimod imthreshold-tdalg imthreshold-tdither imthreshold-tdjvul imthreshold-tent imthreshold-teqbright imthreshold-tgatos imthreshold-tgrad imthreshold-thalftone2 imthreshold-tjanni imthreshold-tkmeans imthreshold-tnib imthreshold-totsu imthreshold-trot imthreshold-tsauvola imthreshold-ttext imthreshold-ttsai imthreshold-twhiterohrer
 CPP           = g++
 CFLAGS        = -DUNIX -O2 -Wall
 LIBS          = -lfreeimage
 VER           = 0
-VERB          = 20170411
+VERB          = 20170518
 COMMON        = libimthreshold.so.$(VER) libimthresholdfreeimage.so.$(VER)
+PREFIX        = /usr/local
+INCPREFIX     = $(PREFIX)/include
+LIBPREFIX     = $(PREFIX)/lib/i386-linux-gnu
+MANPREFIX     = $(PREFIX)/share/man/man1
+INSTALL       = install
+LN            = ln -fs
 
-.PHONY: all
+.PHONY: all clean install
+
 all: $(PROGNAME)
 
-.PHONY: clean
 clean:
 	rm -f $(PROGNAME) libimthreshold.so* libimthresholdfreeimage.so*
 
@@ -30,13 +36,25 @@ libimthresholdfreeimage.so.$(VER): imthresholdfreeimage.cpp
 imthreshold-fadsmooth: fadsmooth.cpp $(COMMON)
 	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
 
+imthreshold-deskew: deskew.cpp $(COMMON)
+	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
+
+imthreshold-rotate: rotate.cpp $(COMMON)
+	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
+
 imthreshold-fautoinv: fautoinv.cpp $(COMMON)
+	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
+
+imthreshold-fbgdiv: fbgdiv.cpp $(COMMON)
+	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
+
+imthreshold-fbgfglsep: fbgfglsep.cpp $(COMMON)
 	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
 
 imthreshold-fdespeckle: fdespeckle.cpp $(COMMON)
 	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
 
-imthreshold-fbgfglsep: fbgfglsep.cpp $(COMMON)
+imthreshold-fdneuro: fdneuro.cpp $(COMMON)
 	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
 
 imthreshold-fgreyworld: fgreyworld.cpp $(COMMON)
@@ -155,3 +173,18 @@ imthreshold-ttsai: ttsai.cpp $(COMMON)
 
 imthreshold-twhiterohrer: twhiterohrer.cpp $(COMMON)
 	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
+
+install: $(PROGNAME)
+	$(INSTALL) -d $(LIBPREFIX)
+	$(INSTALL) -m 0644 libimthreshold.so.$(VER).$(VERB) $(LIBPREFIX)/libimthreshold.so.$(VER).$(VERB)
+	$(LN)  $(LIBPREFIX)/libimthreshold.so.$(VER).$(VERB)  $(LIBPREFIX)/libimthreshold.so.$(VER)
+	$(LN)  $(LIBPREFIX)/libimthreshold.so.$(VER)  $(LIBPREFIX)/libimthreshold.so
+	$(INSTALL) -m 0644 libimthresholdfreeimage.so.$(VER).$(VERB) $(LIBPREFIX)/libimthresholdfreeimage.so.$(VER).$(VERB)
+	$(LN)  $(LIBPREFIX)/libimthresholdfreeimage.so.$(VER).$(VERB)  $(LIBPREFIX)/libimthresholdfreeimage.so.$(VER)
+	$(LN)  $(LIBPREFIX)/libimthresholdfreeimage.so.$(VER)  $(LIBPREFIX)/libimthresholdfreeimage.so
+	$(INSTALL) -d $(INCPREFIX)
+	$(INSTALL) -m 0644 imthreshold*.h $(INCPREFIX)
+	$(INSTALL) -d $(PREFIX)/bin
+	$(INSTALL) -m 0755 $(PROGNAME) $(PREFIX)/bin/
+	$(INSTALL) -d $(MANPREFIX)
+	$(INSTALL) -m 0644 ../man/man1/imthreshold*.1.gz $(MANPREFIX)
