--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,9 @@
-PROGNAME      = imthreshold-deskew imthreshold-rotate imthreshold-fadsmooth imthreshold-fautoinv imthreshold-fbgdiv imthreshold-fbgfglsep imthreshold-fdespeckle imthreshold-fdneuro imthreshold-fdphist imthreshold-fgreyworld imthreshold-fillumc imthreshold-finfo imthreshold-fkmeans imthreshold-flevell imthreshold-flevelmean imthreshold-flevelsigma imthreshold-fperon imthreshold-fposterize imthreshold-fpmean imthreshold-fretinex imthreshold-frs imthreshold-fselgauss imthreshold-fshrink imthreshold-funripple imthreshold-funsharp imthreshold-fwiener imthreshold-fwhitefill imthreshold-sbicub imthreshold-sbilin imthreshold-sbwmag2 imthreshold-scris imthreshold-sgsample imthreshold-shris imthreshold-snearest imthreshold-tabutaleb imthreshold-tbernsen imthreshold-tbht imthreshold-tbimod imthreshold-tchistian imthreshold-tdalg imthreshold-tdither imthreshold-tdjvul imthreshold-tent imthreshold-teqbright imthreshold-tgatos imthreshold-tgrad imthreshold-thalftone2 imthreshold-tjanni imthreshold-tkmeans imthreshold-tnib imthreshold-totsu imthreshold-trot imthreshold-tsauvola imthreshold-ttext imthreshold-ttsai imthreshold-twhiterohrer
+PROGNAME      = imthreshold-deskew imthreshold-rotate imthreshold-filter imthreshold-fautoinv imthreshold-fbgfglsep imthreshold-fdespeckle imthreshold-finfo imthreshold-flevell imthreshold-fpmean imthreshold-size imthreshold-sbwmag2 imthreshold-scris imthreshold-shris imthreshold-tglobal imthreshold-tlocal imthreshold-tdalg imthreshold-tdjvul imthreshold-tgatos imthreshold-thalftone2 imthreshold-ttext imthreshold-twhiterohrer
 CPP           = g++
 CFLAGS        = -DUNIX -O2 -Wall
 LIBS          = -lfreeimage
 VER           = 0
-VERB          = 20171201
+VERB          = 20171218
 COMMON        = libimthreshold.so.$(VER) libimthresholdfreeimage.so.$(VER)
 PREFIX        = /usr/local
 INCPREFIX     = $(PREFIX)/include
@@ -33,94 +33,34 @@ libimthresholdfreeimage.so.$(VER): imthresholdfreeimage.cpp
 	ln -s $@.$(VERB) $@
 	ln -s $@ libimthresholdfreeimage.so
 
-imthreshold-fadsmooth: fadsmooth.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
 imthreshold-deskew: deskew.cpp $(COMMON)
 	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
 
 imthreshold-rotate: rotate.cpp $(COMMON)
 	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
 
-imthreshold-fautoinv: fautoinv.cpp $(COMMON)
+imthreshold-filter: filter.cpp $(COMMON)
 	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
 
-imthreshold-fbgdiv: fbgdiv.cpp $(COMMON)
+imthreshold-fautoinv: fautoinv.cpp $(COMMON)
 	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
 
 imthreshold-fbgfglsep: fbgfglsep.cpp $(COMMON)
 	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
 
-imthreshold-fcolset: fcolset.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
 imthreshold-fdespeckle: fdespeckle.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-fdneuro: fdneuro.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-fdphist: fdphist.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-fgreyworld: fgreyworld.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-fillumc: fillumc.cpp $(COMMON)
 	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
 
 imthreshold-finfo: finfo.cpp $(COMMON)
 	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
 
-imthreshold-fkmeans: fkmeans.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
 imthreshold-flevell: flevell.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-flevelmean: flevelmean.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-flevelsigma: flevelsigma.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-fperon: fperon.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-fposterize: fposterize.cpp $(COMMON)
 	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
 
 imthreshold-fpmean: fpmean.cpp $(COMMON)
 	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
 
-imthreshold-fretinex: fretinex.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-frs: frs.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-fselgauss: fselgauss.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-fshrink: fshrink.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-funripple: funripple.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-funsharp: funsharp.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-fwiener: fwiener.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-fwhitefill: fwhitefill.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-sbicub: sbicub.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-sbilin: sbilin.cpp $(COMMON)
+imthreshold-size: size.cpp $(COMMON)
 	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
 
 imthreshold-sbwmag2: sbwmag2.cpp $(COMMON)
@@ -129,76 +69,31 @@ imthreshold-sbwmag2: sbwmag2.cpp $(COMMON)
 imthreshold-scris: scris.cpp $(COMMON)
 	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
 
-imthreshold-sgsample: sgsample.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
 imthreshold-shris: shris.cpp $(COMMON)
 	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
 
-imthreshold-snearest: snearest.cpp $(COMMON)
+imthreshold-tglobal: tglobal.cpp $(COMMON)
 	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
 
-imthreshold-tabutaleb: tabutaleb.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-tbernsen: tbernsen.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-tbimod: tbimod.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-tchistian: tchistian.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-tbht: tbht.cpp $(COMMON)
+imthreshold-tlocal: tlocal.cpp $(COMMON)
 	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
 
 imthreshold-tdalg: tdalg.cpp $(COMMON)
 	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
 
-imthreshold-tdither: tdither.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
 imthreshold-tdjvul: tdjvul.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-tent: tent.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-teqbright: teqbright.cpp $(COMMON)
 	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
 
 imthreshold-tgatos: tgatos.cpp $(COMMON)
 	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
 
-imthreshold-tgrad: tgrad.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
 imthreshold-thalftone2: thalftone2.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-tjanni: tjanni.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-tkmeans: tkmeans.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-tnib: tnib.cpp $(COMMON)
 	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
 
 imthreshold-totsu: totsu.cpp $(COMMON)
 	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
 
-imthreshold-trot: trot.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-tsauvola: tsauvola.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
 imthreshold-ttext: ttext.cpp $(COMMON)
-	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
-
-imthreshold-ttsai: ttsai.cpp $(COMMON)
 	$(CPP) $(CFLAGS) $(LIBS) $^ -s -o $@
 
 imthreshold-twhiterohrer: twhiterohrer.cpp $(COMMON)
